# python-project-83

./: .env  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: lint.yml  linter.yml
page_analyzer/: __init__.py  app.py  config.py  parser.py  urls_repository.py
page_analyzer/templates/: index.html  layout.html  url_id.html  urls.html
