[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.5",
    "psycopg2-binary>=2.9.10",
    "uv>=0.6.3",
]

[dependency-groups]
dev = [
    "flake8>=7.1.2",
]
